--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -8,3 +8,12 @@
     {% endfor %}
   </ul>
 </section>
+<section class="even">
+
+<h1>
+  <a href="https://github.com/eshaiju"><img src="/images/github_zpse87fc53d.jpg" width="40" height="40"></a>
+  &nbsp;
+  <a href="https://twitter.com/eshaiju"><img src="/images/twitter_zps447bd274.jpg" width="40" height="40"></a>
+</h1>
+
+</section>
